// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model User {
  id        Int       @id @default(autoincrement())
  firstName String
  lastName  String
  email     String    @unique
  password  String
  gender    String?
  dob       DateTime?
  weight    Float?
  height    Float?
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  habits    Habit[]
}

model HabitCategory {
  id        Int      @id @default(autoincrement())
  name      String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  habits    Habit[]
}

model Habit {
  id              Int           @id @default(autoincrement())
  name            String
  description     String
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt
  user            User          @relation(fields: [userId], references: [id])
  userId          Int
  habitCategory   HabitCategory @relation(fields: [habitCategoryId], references: [id])
  habitCategoryId Int
  dailyRecords    DailyRecord[]
  goals           Goal[]
  reminders       Reminder[]
}

model DailyRecord {
  id        Int      @id @default(autoincrement())
  date      DateTime
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  habit     Habit    @relation(fields: [habitId], references: [id])
  habitId   Int
}

model Goal {
  id          Int      @id @default(autoincrement())
  frequency   String
  targetValue Int
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  habit       Habit    @relation(fields: [habitId], references: [id])
  habitId     Int
}

model Reminder {
  id        Int      @id @default(autoincrement())
  time      DateTime
  message   String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  habit     Habit    @relation(fields: [habitId], references: [id])
  habitId   Int
}
